--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lucide-react": "^0.548.0",
     "next-themes": "^0.4.6",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.1",
