--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.548.0",
     "next-themes": "^0.4.6",
+    "react-day-picker": "^9.11.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
