--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@react-google-maps/api": "^2.20.7",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.548.0",
     "next-themes": "^0.4.6",
     "react-day-picker": "^9.11.1",
