--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "nextn",
+  "name": "next-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 9012",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "NODE_ENV=production next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
@@ -40,11 +40,16 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-google-maps/api": "^2.20.7",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^10.13.0",
     "lucide-react": "^0.548.0",
+    "next": "^15.0.0",
     "next-themes": "^0.4.6",
+    "react": "^18.3.0",
     "react-day-picker": "^9.11.1",
+    "react-dom": "^18.3.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
@@ -59,12 +64,14 @@
     "@types/events": "^3.0.3",
     "@types/google.maps": "^3.55.11",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.2.2",
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tailwindcss-debug-screens": "^2.2.1",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
