Soluciona errores de compilación y prepara para App Hosting

--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,18 @@
 {
+  "hosting": {
+    "public": "out",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
   "emulators": {
     "auth": {
       "host": "0.0.0.0",
