--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,22 @@
 name: Deploy to Firebase Hosting
-
 on:
   push:
     branches:
       - main
-
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-       
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-       
       - name: Install dependencies
-        run: npm ci
-       
+        run: npm install
       - name: Build project
+        run: npm run build
         env:
           NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
           NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
@@ -29,20 +25,10 @@ jobs:
           NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
           NEXT_PUBLIC_FIREBASE_APP_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}
           NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID }}
-        run: npm run build
-       
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TACHOPAUSE_OPTIMIZER_171_AA315 }}'
-          projectId: 'tachopause-optimizer-171-aa315'
-          channelId: live
-```
-
-### 3. **NO olvides agregar el secret que falta**
-
-En GitHub → Settings → Secrets and variables → Actions:
-```
-Nombre: NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID
-Valor: G-7TN917672Z
+          projectId: tachopause-optimizer-171-aa315
+          entryPoint: ./out
